@@ -8,3 +8,6 @@
 - API: StackDockStation now reads a StackDockComponentFactory out of the DockProperties, and changes its StackDockComponent according to the factory. DockThemes no longer have to exchange the components manually.
 - Layout: Left-click on AbstractDockTitle will open a popup menu more often
 - Bugfix: SplitDockStation did not properly remove the front-dockable when requested
+- Layout: FlapDockStation now changes the selected child when the mouse is released, not when the mouse is pressed.
+- Layout: The DockTitles shown as Buttons for FlapDockStation have additional behavior when the mouse is pressed.
+- Bugfix: added some dirty hacks to ensure that the title-drag-window will close itself when the first event was ignored. That happend when the Window was not visible when dispose was called.
